<resources>
    <string name="app_name">OphotoClient</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="user_name">Name</string>
    <string name="password">Password</string>
    <string name="sign_up_instead">Sign up instead</string>
    <string name="repeat_password">Repeat password</string>
    <string name="sign_in_instead">Sign in instead</string>
    <string name="feed">Feed</string>
    <string name="profile">Profile</string>
    <string name="action_profile">Profile</string>
    <string name="action_feed">Feed</string>
    <string name="actions">Actions</string>
    <string name="log_out">Log out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="greetings">Greeting</string>
    <string name="new_image">New image</string>
    <string name="description">Description</string>
    <string name="post">Post</string>
    <string name="create_new_post">Create new post</string>
    <string name="image">Image</string>
    <string name="refresh">Refresh</string>
    <string name="followers">Followers</string>
    <string name="follow">Follow</string>
    <string name="bio">Bio</string>
    <string name="profile_image">Profile image</string>
    <string name="like">Like</string>
    <string name="likes">Likes</string>
    <string name="following">Following</string>
    <string name="all">All</string>
    <string name="search">Search</string>
</resources>
