<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_feed"
            android:title="@string/feed" />
        <item
            android:id="@+id/nav_post"
            android:title="@string/post" />
        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_create_post"
            android:title="@string/create_new_post" />
        <item
            android:id="@+id/nav_search"
            android:title="@string/Search" />
    </group>

    <item android:title="@string/actions">
        <menu>
            <item
                android:id="@+id/nav_log_out"
                android:title="@string/log_out" />
            <item
                android:id="@+id/nav_refresh"
                android:title="@string/refresh" />
        </menu>
    </item>

</menu>